# openenv-patient-triage-system

./: .dockerignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh  strict_check.py
server/: app.py
triage_env/: __init__.py  environment.py  graders.py  models.py  tasks.py
