[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-patient-triage-system"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for AI hospital patient triage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.0",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
server = "server.app:main"
